--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Práctica B3 - MarcaMX</title>
   </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <body id="root"></body>
+  <footer id="react-footer">HOOOASOFOSADFO</footer>
+
+  <script type="module" src="/src/main.jsx"></script>
+
 </html>
