--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Práctica B3 - MarcaMX</title>
   </head>
   <body id="root"></body>
-  <footer id="react-footer">HOOOASOFOSADFO</footer>
-
+  <footer id="react-footer"></footer>
   <script type="module" src="/src/main.jsx"></script>
 
 </html>
